// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`storyshots components/ui/DropdownButton default 1`] = `
<div
  style="height: 100%;"
>
  <div
    class="lck-dropdownbutton"
  >
    <button
      aria-controls="pv_id_3_overlay"
      aria-haspopup="true"
      class="lck-dropdownbutton-menubutton p-button p-component"
      type="button"
    >
      <!---->
       
      <span
        class="p-button-label"
      >
         
      </span>
       
      <!---->
    </button>
     
    <!---->
  </div>
</div>
`;

exports[`storyshots components/ui/DropdownButton dropdown opened with model 1`] = `
<div
  style="height: 100%;"
>
  <div
    class="lck-dropdownbutton no-decoration-link p-mr-2"
  >
    <button
      aria-controls="pv_id_5_overlay"
      aria-haspopup="true"
      class="lck-dropdownbutton-menubutton p-button p-component"
      type="button"
    >
      <!---->
       
      <span
        class="p-button-label"
      >
        This is a dropdown button
      </span>
       
      <!---->
    </button>
     
    <!---->
  </div>
</div>
`;

exports[`storyshots components/ui/DropdownButton with model 1`] = `
<div
  style="height: 100%;"
>
  <div
    class="lck-dropdownbutton no-decoration-link p-mr-2"
  >
    <button
      aria-controls="pv_id_4_overlay"
      aria-haspopup="true"
      class="lck-dropdownbutton-menubutton p-button p-component"
      type="button"
    >
      <!---->
       
      <span
        class="p-button-label"
      >
        This is a dropdown button
      </span>
       
      <!---->
    </button>
     
    <!---->
  </div>
</div>
`;
